# libreSIEM

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
docs/: deployment.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/alerts/: page.tsx
frontend/src/api/analytics/: route.ts
frontend/src/api/security/: route.ts
frontend/src/api/settings/: route.ts
frontend/src/app/: animations.css  globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/hooks/: useAlerts.ts  useSecurity.ts
frontend/src/app/reports/: page.tsx
frontend/src/components/: AnimatedLayout.tsx  ClientLayout.tsx  Sidebar.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/hooks/: useAnalytics.ts  useSettings.ts
frontend/src/security/: page.tsx
playbooks/: incident_response.yml
src/libreSIEM/: __init__.py  config.py
src/libreSIEM/collector/: __init__.py  __main__.py  auth.py  collector.py  models.py  parsers.py  webhooks.py
src/libreSIEM/detection/: alerts.py  engine.py
src/libreSIEM/processor/: __init__.py  elasticsearch.py  enrichment.py  processor.py
src/libreSIEM/soar/: engine.py
tests/: Dockerfile  conftest.py  test_cloud_integrations.py  test_collector.py  test_collector_advanced.py  test_config.py  test_detection.py  test_elasticsearch.py  test_enrichment.py  test_integrations.py  test_security_integrations.py  test_settings.py  test_soar.py
tests/integration/: test_kafka_integration.py
(+13 files in other folders)
