[tool.poetry]
name = "libreSIEM"
version = "0.1.0"
description = "A lightweight, cloud-native, open-source Security Information & Event Management (SIEM) system"
authors = ["LibreSIEM Team"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "libreSIEM", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
elasticsearch = "^8.10.0"
confluent-kafka = "^2.3.0"
pydantic = "^2.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.0"
yara-python = "^4.3.0"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
prometheus-client = "^0.17.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
